solved align problem of Keep traditions in footer

--- a/src/style.css
+++ b/src/style.css
@@ -50,9 +50,10 @@ footer{
     padding-left: 1.5em;
     padding-right: 1.5em;
 	grid-area: footer;
-	display: flex;
-    justify-content:space-between;
+    display: grid;
+    justify-items: center;
     align-items: center;
+    grid-template-columns: 10% 80% 10%;
 	background-color: powderblue;
 	color: #242331;
 	padding-top: 0.5em;
@@ -758,6 +759,11 @@ a{
 }
 
 /* footer */
+
+#footer-about-us{
+    padding-left: 1em;
+    justify-self: start;
+}
 
 #footer-bug-icon{
     width: 1.1em;
